fixat det mesta förutom räkneval

--- a/index.html
+++ b/index.html
@@ -9,6 +9,18 @@
     <script src="script.js" defer></script>
 </head>
 <body>
+    <div>
+        <h1>skriv in två tal och välj räknesätt</h1>
+        <input type="number" id="firstNumber">
+        <select id="raknesatt">
+            <option value="+">plus</option>
+            <option value="-">minus</option>
+            <option value="/">delat</option>
+            <option value="*">gånger</option>
+          </select>
+        <input type="number" id="secondNumber">
+        <button id="myBtn">räkna på det</button>
+    </div>
     
 </body>
 </html>
