allt klart förutom posta som lista på sidan

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <input type="number" id="secondNumber">
         <button id="myBtn">räkna på det</button>
     </div>
+    <ul id="minLista"></ul>
     
 </body>
 </html>
